# WordIndexGenerator

./: CMakeLists.txt  README.md
include/: common_words.h
output/: amohame2_1201_words.txt  amohame2_caesar.txt  amohame2_love.txt  amohame2_wasteland.txt
src/: main.c
test/: 1200_words.out  1200_words.txt  1201_words.out  1201_words.txt  caesar.out  caesar.txt  common_words.h  love.out  love.txt  wasteland.out  wasteland.txt
test/output/: amohame2_1201_words.txt.out  amohame2_caesar.txt.out  amohame2_love.txt.out  amohame2_wasteland.txt.out
